implemented pretty fast game

--- a/README.org
+++ b/README.org
@@ -3,3 +3,14 @@
   Simple asteroids game made with liballegro and common lisp.
 
   Install liballegro before you can launch it
+
+* Todo [4/9]
+  1. [X] organize modules
+  2. [X] make physics
+  3. [X] optimize
+  4. [X] refactor
+  5. [ ] add sounds
+  6. [ ] add menu
+  7. [ ] add highscore (db?)
+  8. [ ] graphics
+  9. [ ] makefile and executable binary
