--- a/README.org
+++ b/README.org
@@ -4,13 +4,17 @@
 
   Install liballegro before you can launch it
 
-* Todo [5/9]
+* Todo [12/13]
   1. [X] organize modules
   2. [X] make physics
   3. [X] refactor
   4. [X] add menu
   5. [X] add highscore
-  6. [ ] graphics
-  7. [ ] add sounds
-  8. [ ] optimize (fields to variablse, maybe stack allocate)
-  9. [ ] makefile and executable binary
+  6. [X] graphics
+  7. [X] add stars
+  8. [X] add explosions
+  9. [X] add sounds
+  10. [X] renaming (maybe option -> initial)
+  11. [X] optimize
+  12. [X] makefile and executable binary
+  13. [ ] try ecl
